fix(browser): increase contrast for replay buttons (#4912)

--- a/mocha.css
+++ b/mocha.css
@@ -17,7 +17,7 @@
   --mocha-test-html-error-color: #000;
   --mocha-box-shadow-color: #eee;
   --mocha-box-bottom-color: #ddd;
-  --mocha-test-replay-color: #888;
+  --mocha-test-replay-color: #000;
   --mocha-test-replay-bg-color: #eee;
   --mocha-stats-color: #888;
   --mocha-stats-em-color: #000;
@@ -49,7 +49,7 @@
      --mocha-test-html-error-color: #fff;
      --mocha-box-shadow-color: #444;
      --mocha-box-bottom-color: #555;
-     --mocha-test-replay-color: #888;
+     --mocha-test-replay-color: #fff;
      --mocha-test-replay-bg-color: #444;
      --mocha-stats-color: #aaa;
      --mocha-stats-em-color: #fff;
@@ -292,11 +292,12 @@ body {
   -moz-transition:opacity 200ms;
   -o-transition:opacity 200ms;
   transition: opacity 200ms;
-  opacity: 0.3;
+  opacity: 0.7;
   color: var(--mocha-test-replay-color);
 }
 
 #mocha .test:hover a.replay {
+  box-shadow: 0 0 1px inset var(--mocha-test-replay-color);
   opacity: 1;
 }
 
